syntax = "proto3";

package dk.sdu.mmmi.digitalenergyhub.protobuf;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "dk.sdu.mmmi.digitalenergyhub.protobuff";

/* Meta represents the metadata of the message.
 * This object can be used to trace the publisher of a message. */
message Meta {
  /* Global unique id for the sender of the message. */
  string sender_id = 1;

  /* Global unique message id of the message. */
  string message_id = 2;

  /* UTC Epoch time */
  google.protobuf.Timestamp timestamp = 3;
}

message JSONMessage {
  Meta meta = 1;
  string json_payload = 2;
}