syntax = "proto3";

package dk.sdu.mmmi.protobuf.ocpp2_0_1.messages;

import "google/protobuf/timestamp.proto";
import "ConnectorStatusEnumType.proto";

option java_multiple_files = true;
option java_package = "dk.sdu.mmmi.protobuf.ocpp2_0_1.messages";

/**
This contains the field definition of the StatusNotificationRequest PDU sent by the Charging Station to the CSMS.
This message might be removed in a future version of OCPP. It will be replaced by Device Management Monitoring events.
 */
message StatusNotificationRequest {
  // Required. The time for which the status is reported.
  google.protobuf.Timestamp timestamp = 1;

  // Required. This contains the current status of the Connector.
  enumerations.ConnectorStatusEnumType connectorStatus = 2;

  // Required. The id of the EVSE to which the connector belongs for which the status is reported.
  int32 evseId = 3;

  // Required. The id of the connector within the EVSE for which the status is reported.
  int32 connectorId = 4;
}